Add Electron files - basic

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "gitinnit-electron",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "main": "main.js",
+  "license": "MIT",
+  "scripts": {
+    "start": "electron ."
+  }
 }
