--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "dependencies": {
     "electron": "^11.2.3"
+  },
+  "devDependencies": {
+    "webpack": "^5.22.0",
+    "webpack-cli": "^4.5.0"
   }
 }
