--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "electron": "^11.2.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.13.8",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0"
   }
