--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "webpack-node-externals": "2.5.2"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "simple-git": "^2.36.0"
   }
 }
