--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "simple-git": "^2.36.0",
-    "electron-oauth2": "^3.0.0"
+    "electron-oauth2": "^3.0.0",
+    "simple-git": "^2.37.0"
   }
 }
