Auth process + global config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electronuxt",
+  "name": "gitinnit-electron",
   "version": "0.0.1",
   "description": "An electron-nuxt project",
   "main": "./dist/main/index.js",
